subindo para tentar corrigir