@@ -4,6 +4,7 @@ import java.util.Collection;
 import java.util.Collections;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import jakarta.persistence.Column;
@@ -12,7 +13,11 @@ import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.util.Collection;
+import java.util.List;
 @Entity
 @Table(name = "tb_usuarios")  
 public class Usuario implements UserDetails {
@@ -41,12 +46,10 @@ public class Usuario implements UserDetails {
     private String grupo;
 
 
-
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-
-        return Collections.singletonList(() -> "ROLE_" + grupo.toUpperCase());
+        return List.of(new SimpleGrantedAuthority(grupo));
     }
+
 
     @Override
     public String getPassword() {
